# Zephyr_Device_driver_model

./: 26020_RTOS4_Installer.bat  26020_Restore.bat  Install-26020_RTOS4.ps1  README.md  README_26020_RTOS4_Installer.md
Labs/lab0/: CMakeLists.txt
Labs/lab0/src/: main.c
Labs/lab1/: CMakeLists.txt
Labs/lab2/: CMakeLists.txt
Labs/lab3/: prj.conf
Solutions/lab0/: CMakeLists.txt
Solutions/lab1/: CMakeLists.txt  prj.conf
Solutions/lab1/boards/: same54_xpro.overlay
Solutions/lab2/: CMakeLists.txt  prj.conf
Solutions/lab3/: CMakeLists.txt  prj.conf  sections-rom.ld
Solutions/lab3/boards/: same54_xpro.overlay
Solutions/lab3/src/: main.c
Solutions/led/drivers/: CMakeLists.txt
archive/: 26020_restore_archive.bat  Install-26020_RTOS4.ps1
archive/Labs/lab3/: CMakeLists.txt
archive/Labs/lab3/boards/: same54_xpro.overlay
archive/Labs/lab3/dts/bindings/sensor/: mycompany,my-http-temp.yaml
archive/Labs/led/: CMakeLists.txt
archive/Labs/led/drivers/: Kconfig
lab0/: CMakeLists.txt  prj.conf
lab0/boards/: same54_xpro.overlay
lab0/src/: main.c
lab1/: CMakeLists.txt
lab1/src/: main.c
lab2/: CMakeLists.txt
lab2/src/: main.c
lab3/: CMakeLists.txt  prj.conf  sections-rom.ld
lab3/boards/: same54_xpro.overlay
lab3/dts/bindings/sensor/: mycompany,my-http-temp.yaml  mycompany,my-temp-sensor.yaml
lab3/src/: main.c
led/: CMakeLists.txt
led/drivers/: CMakeLists.txt
led/drivers/led/: CMakeLists.txt  Kconfig  my_led_driver.c  my_led_driver.h
led/dts/bindings/: vendor-prefixes.txt
led/zephyr/: module.yaml
(+4 files in other folders)
